Migrate CLI to Java 11 and harden JDT analysis